--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ a. De website moet volledig responsive zijn.-->
         </div>
         <!-- Hero -->
       </div>
+      <p>test</p>
     </main>
     <footer>
       <!-- <h1>social media here</h1>-->
