--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ a. De website moet volledig responsive zijn.-->
           <h3>
             <a href="index.html">Home</a>
             <a href="about.html">About me</a>
-            <a href="Projects.html">My projects</a>
-            <a href="Contact.html">Contact</a>
+            <a href="projects.html">My projects</a>
+            <a href="contact.html">Contact</a>
           </h3>
         </nav>
       </div>
