--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,8 @@ a. Een overzicht van alle projecten.-->
         <h3>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
-          <a href="Projects.html">My projects</a>
-          <a href="Contact.html">Contact</a>
+          <a href="projects.html">My projects</a>
+          <a href="contact.html">Contact</a>
         </h3>
       </nav>
     </div>
@@ -37,28 +37,28 @@ a. Een overzicht van alle projecten.-->
       <h1>Recent projects</h1></span>
       <div class="card-row">
         <div class="card">
-          <img src="/Images/PongScreenshot.png" alt="PongScreenshot" />
+          <img src="/images/pongScreenshot.png" alt="PongScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
-                  href="Pong.html"
+                  href="pong.html"
                   role="button"
                   >Pong</a> 
           <h4>My space themed Pong was the first project I made.</h4>
         </div>
         <div class="card">
-          <img src="/Images/TankGameScreenshot.png" alt="TankGameScreenshot" />
+          <img src="/images/tankGameScreenshot.png" alt="TankGameScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
-                  href="TankGame.html"
+                  href="tankGame.html"
                   role="button"
                   >TankGame</a>          
           <h4>My Tank Game I made as my second project.</h4>
         </div>
         <div class="card">
-          <img src="/Images/RaceGameScreenshot.png" alt="RaceGameScreenshot" />
+          <img src="/images/raceGameScreenshot.png" alt="RaceGameScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
-                  href="RaceGame.html"
+                  href="raceGame.html"
                   role="button"
                   >RaceGame</a> 
           <h4>My Race Game I made as my 3rd project.</h4>
