--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@ a. Hier kun je belangrijke informatie vermelden die je niet kwijt wilt op de tit
         <h3>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
-          <a href="Projects.html">My projects</a>
-          <a href="Contact.html">Contact</a>
+          <a href="projects.html">My projects</a>
+          <a href="contact.html">Contact</a>
         </h3>
       </nav>
     </div>
