--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@ a. Een contactpagina kan niet ontbreken bij een website. Het laat zien dat het b
         <h3>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
-          <a href="Projects.html">My projects</a>
-          <a href="Contact.html">Contact</a>
+          <a href="projects.html">My projects</a>
+          <a href="contact.html">Contact</a>
         </h3>
       </nav>
     </div>
