--- a/raceGame.html
+++ b/raceGame.html
@@ -25,8 +25,8 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
         <h3>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
-          <a href="Projects.html">My projects</a>
-          <a href="Contact.html">Contact</a>
+          <a href="projects.html">My projects</a>
+          <a href="contact.html">Contact</a>
         </h3>
       </nav>
     </div>
@@ -46,7 +46,7 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
     <h2>For my race game I had to make 2 maps with AI and a working lap system. <br> I also made the car model for the player and AI, some cows,<br> a crowd and some flowers in blender. </h2>
   </div>
   <div class="Img">        
-    <img src="/Images/RaceGameScreenshot.png" alt="RaceScreenshot" width="400" height="200">
+    <img src="/images/raceGameScreenshot.png" alt="RaceScreenshot" width="400" height="200">
   </div> 
   </main>
   <script
