--- a/tankGame.html
+++ b/tankGame.html
@@ -25,8 +25,8 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
         <h3>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
-          <a href="Projects.html">My projects</a>
-          <a href="Contact.html">Contact</a>
+          <a href="projects.html">My projects</a>
+          <a href="contact.html">Contact</a>
         </h3>
       </nav>
     </div>
@@ -49,7 +49,7 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
       <br> </h2>
   </div>
   <div class="Img">        
-    <img src="/Images/TankGameScreenshot.png" alt="TankScreenshot" width="400" height="200">
+    <img src="/images/tankGameScreenshot.png" alt="TankScreenshot" width="400" height="200">
   </div>
   </main>
   <script
