--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@ a. Een overzicht van alle projecten.-->
       <h1>Recent projects</h1></span>
       <div class="card-row">
         <div class="card">
-          <img src="/images/pongScreenshot.png" alt="PongScreenshot" />
+          <img src="images/pongScreenshot.png" alt="PongScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
                   href="pong.html"
@@ -46,7 +46,7 @@ a. Een overzicht van alle projecten.-->
           <h4>My space themed Pong was the first project I made.</h4>
         </div>
         <div class="card">
-          <img src="/images/tankGameScreenshot.png" alt="TankGameScreenshot" />
+          <img src="images/tankGameScreenshot.png" alt="TankGameScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
                   href="tankGame.html"
@@ -55,7 +55,7 @@ a. Een overzicht van alle projecten.-->
           <h4>My Tank Game I made as my second project.</h4>
         </div>
         <div class="card">
-          <img src="/images/raceGameScreenshot.png" alt="RaceGameScreenshot" />
+          <img src="images/raceGameScreenshot.png" alt="RaceGameScreenshot" />
           <a
                   class="btn btn-primary btn-lg mt-5"
                   href="raceGame.html"
