--- a/tankGame.html
+++ b/tankGame.html
@@ -49,7 +49,7 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
       <br> </h2>
   </div>
   <div class="Img">        
-    <img src="../images/tankGameScreenshot.png" alt="TankScreenshot" width="400" height="200">
+    <img src="images/tankGameScreenshot.png" alt="TankScreenshot" width="400" height="200">
   </div>
   </main>
   <script
