--- a/pong.html
+++ b/pong.html
@@ -49,7 +49,7 @@ a. Elk project krijgt zijn eigen pagina waarin verdere informatie te zien en te 
       <br> I wanted to give it a space theme. I made this by using Objects and a few scripts.<br> I made the background in Aseprite. </h2>
   </div>
   <div class="Img">        
-    <img src="/images/pongScreenshot.png" alt="PongScreenshot" width="400" height="200">
+    <img src="images/pongScreenshot.png" alt="PongScreenshot" width="400" height="200">
   </div>
 </main>
 <script
