--- a/about.html
+++ b/about.html
@@ -36,9 +36,14 @@ a. Hier kun je belangrijke informatie vermelden die je niet kwijt wilt op de tit
       <h1>
         About Me
       </h1>
-      <h2 >
-        Hello, my name is Marlies. I'm currently in my first year of software game development at Noorderpoort in Groningen. I've made 3 project so far and went to 1 game jam in Groningen. My goal is to make a game with replayability and a great storyline.
-      </h2>
+      <h4 >
+        <!--Hello, my name is Marlies. I'm currently in my second year of software game development at Noorderpoort in Groningen. I've made 3 project so far and went to 1 game jam in Groningen. My goal is to make a game with replayability and a great storyline.-->
+        Hallo, mijn naam is Marlies. Op dit moment ben ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
+        Ik heb 4 projecten gemaakt en ben bezig met een RTS op dit moment. Ook heb ik meegedaan aan de Global Game Jam in Groningen 2023 samen met een paar klasgenoten. Ik woon samen met mijn ouders, broertje, kat en hond. 
+        Sinds ik een kind was heb ik altijd al zitten gamen met mijn familie. Het eerste console waar ik op heb gespeeld was de Playstation 2. Toen ging ik van Nintendo DS naar de WII en de Playstation 4. Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet. Ik heb een Havo diploma gedaan op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer.
+        Het programma wat ik nu het meeste gebruik is Unity met C#. Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. Verder heb ik al een basis met het maken van modellen in Blender.  
+        Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn. Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games. Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan verbeteren. 
+      </h4>
       </div>
     </section>
   </main>
