--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<!--1. Indexpagina
-a. Strikt genomen de eerste pagina of de introductiepagina van een website.
-6. Navigatie
-a. Als je een professionele website hebt waarop het niet makkelijk is om te navigeren, is als het net alsof je een dure kopieermachine hebt waarbij het papier altijd vastloopt: mensen raken gefrustreerd en lopen weg.
-b. Navigatiebalk: net als de andere punten die in dit artikel genoemd worden. In principe stelt de regel dat een gebruiker elk beetje informatie binnen 3 muisklikken moet kunnen vinden. Met een goede navigatiebalk (die een megamenu en zoekfunctie omvat) moet dit geen probleem zijn. Ook al houd je je niet zo strikt aan deze regel, het concept is goed om in gedachten te houden. Er is niets erger dan een potentiële klant die gefrustreerd raakt en je site verlaat omdat hij door een slechte sitestructuur niet kon vinden wat hij zocht.
-7. Responsive
-a. De website moet volledig responsive zijn.-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -37,10 +30,8 @@ a. De website moet volledig responsive zijn.-->
     </header>
     <main>
       <div class="container">
-        <!-- Hero -->
         <div
-          class="p-5 text-center bg-image rounded-3 d-flex justify-content-center align-items-center"
-        >
+          class="p-5 text-center bg-image rounded-3 d-flex justify-content-center align-items-center">
           <div class="mask">
             <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-white">
@@ -53,13 +44,11 @@ a. De website moet volledig responsive zijn.-->
                   class="btn btn-outline-light btn-lg mt-5"
                   href="about.html"
                   role="button"
-                  >Want to know more?</a
-                >
+                  >Want to know more?</a>
               </div>
             </div>
           </div>
         </div>
-        <!-- Hero -->
       </div>
     </main>
     <footer>
